@@ -8,6 +8,7 @@
 #include "x/w/impl/iconfwd.H"
 #include "x/w/impl/connection_threadfwd.H"
 #include "x/w/defaultthemefwd.H"
+#include "x/w/rgbfwd.H"
 #include <vector>
 
 LIBCXXW_NAMESPACE_START
