@@ -1,3 +1,8 @@
+2019-09-28  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Add image_color as a color_arg option, use an image for a
+	background color.
+
 2019-09-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* file_dialog: clean the filename field after closing the dialog
